@@ -469,6 +469,15 @@
 					<top>590</top>
 					<include>UserRatingCircle</include>
 				</control>
+                <control type="textbox" id="15500">
+					<left>30</left>
+					<top>640</top>
+					<width>525</width>
+					<bottom>117</bottom>
+					<autoscroll time="3000" delay="7000" repeat="5000">!System.HasModalDialog + Skin.HasSetting(AutoScroll)</autoscroll>
+					<label>$VAR[ShiftRightTextBoxVar]</label>
+					
+				</control>
 				<control type="textbox" id="15500">
 					<left>30</left>
 					<top>640</top>
