@@ -1,20 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <includes>
 
-	<include name="Visible_Right_Delayed1">
-		<include condition="Skin.HasSetting(no_slide_animations)">Visible_Fade</include>
-		<include condition="!Skin.HasSetting(no_slide_animations)">Vis_FadeSlide_Right_Delayed1</include>
-	</include>
-	<include name="Vis_FadeSlide_Right_Delayed1">
-		<animation type="Visible">
-			<effect type="fade" start="0" end="100" time="300" tween="sine" delay="300" easing="out" />
-			<effect type="slide" start="320" end="0" time="400" delay="300" tween="cubic" easing="out" />
-		</animation>
-		<animation type="Hidden">
-			<effect type="fade" start="100" end="0" time="300" tween="sine" easing="out" />
-			<effect type="slide" start="0" end="320" time="300" tween="cubic" easing="out" />
-		</animation>
-	</include>
+
     
     
 	<include name="Animation_FocusTextureFade">
