@@ -24,77 +24,59 @@
 		</control>
 	</include>
 	<include name="ImageWidget">
-		<param name="onup_id">20000</param>
-		<param name="ondown_id">20001</param>
+		<param name="visible">true</param>
 		<param name="visible_1">true</param>
 		<param name="visible_2">true</param>
+		<param name="button2_label">$LOCALIZE[31116]</param>
 		<param name="button2_onclick">true</param>
 		<definition>
-			<control type="group">
+			<control type="group" id="$PARAM[button_id]889">
 				<visible>$PARAM[visible]</visible>
-				<control type="image">
+				<control type="grouplist" id="$PARAM[button_id]577">
+					<orientation>vertical</orientation>
 					<top>0</top>
-					<left>478</left>
-					<width>1370</width>
-					<height>806</height>
-					<texture border="22">dialogs/dialog-bg.png</texture>
-				</control>
-				<control type="multiimage">
-					<top>31</top>
-					<left>508</left>
-					<width>1310</width>
-					<height>746</height>
-					<imagepath>$PARAM[image_path]</imagepath>
-				</control>
-				<control type="image">
-					<top>571</top>
-					<left>508</left>
-					<width>1310</width>
-					<height>206</height>
-					<texture colordiffuse="AAFFFFFF">colors/black.png</texture>
-				</control>
-				<control type="grouplist" id="$PARAM[button_id]567">
-					<top>680</top>
-					<left>508</left>
-					<width>1310</width>
-					<orientation>horizontal</orientation>
+					<bottom>0</bottom>
+					<left>50</left>
+					<right>50</right>
 					<align>center</align>
-					<onleft>9000</onleft>
-					<onup>$PARAM[onup_id]</onup>
-					<ondown>$PARAM[ondown_id]</ondown>
-					<control type="button" id="$PARAM[button_id]">
-						<width>auto</width>
-						<height>110</height>
-						<label>$PARAM[button_label]</label>
-						<textoffsetx>40</textoffsetx>
-						<onclick>$PARAM[button_onclick]</onclick>
+					<control type="textbox">
+						<width>100%</width>
+						<height min="0" max="300">auto</height>
+						<label>$PARAM[text_label]</label>
 						<align>center</align>
-						<texturefocus border="40">buttons/dialogbutton-fo.png</texturefocus>
-						<texturenofocus border="40">buttons/dialogbutton-nofo.png</texturenofocus>
-						<visible>$PARAM[visible_1]</visible>
+						<font>font14</font>
 					</control>
-					<control type="button" id="$PARAM[button_id]568">
-						<width>auto</width>
-						<height>110</height>
-						<label>$LOCALIZE[31116]</label>
-						<textoffsetx>40</textoffsetx>
-						<onclick>$PARAM[button2_onclick]</onclick>
-						<onclick>SetFocus(9000)</onclick>
+					<control type="grouplist" id="$PARAM[button_id]567">
+						<width>100%</width>
+						<onup>9000</onup>
+						<ondown>9000</ondown>
+						<orientation>horizontal</orientation>
 						<align>center</align>
-						<texturefocus border="40">buttons/dialogbutton-fo.png</texturefocus>
-						<texturenofocus border="40">buttons/dialogbutton-nofo.png</texturenofocus>
-						<visible>$PARAM[visible_2]</visible>
+						<onleft>9000</onleft>
+						<control type="button" id="$PARAM[button_id]">
+							<width>auto</width>
+							<height>110</height>
+							<label>$PARAM[button_label]</label>
+							<textoffsetx>40</textoffsetx>
+							<onclick>$PARAM[button_onclick]</onclick>
+							<align>center</align>
+							<texturefocus border="23" colordiffuse="button_focus">buttons/dialogbutton-fo.png</texturefocus>
+							<texturenofocus border="40">buttons/dialogbutton-nofo.png</texturenofocus>
+							<visible>$PARAM[visible_1]</visible>
+						</control>
+						<control type="button" id="$PARAM[button_id]568">
+							<width>auto</width>
+							<height>110</height>
+							<label>$PARAM[button2_label]</label>
+							<textoffsetx>40</textoffsetx>
+							<onclick>$PARAM[button2_onclick]</onclick>
+							<onclick>SetFocus(9000)</onclick>
+							<align>center</align>
+							<texturefocus border="23" colordiffuse="button_focus">buttons/dialogbutton-fo.png</texturefocus>
+							<texturenofocus border="40">buttons/dialogbutton-nofo.png</texturenofocus>
+							<visible>$PARAM[visible_2]</visible>
+						</control>
 					</control>
-				</control>
-				<control type="textbox" id="$PARAM[button_id]">
-					<top>590</top>
-					<left>558</left>
-					<width>1220</width>
-					<height>180</height>
-					<label>$PARAM[text_label]</label>
-					<align>center</align>
-					<font>font12</font>
-					<visible>$PARAM[visible]</visible>
 				</control>
 			</control>
 		</definition>
@@ -1354,7 +1336,7 @@
 		<onback>PageUp</onback>
 		<preloaditems>2</preloaditems>
 	</include>
-    <include name="WidgetListCommon_customwidgets">
+    <!--include name="WidgetListCommon_customwidgets">
 		<scrolltime tween="cubic" easing="out">500</scrolltime>
 		<orientation>vertical</orientation>
 		<onleft>9000</onleft>
@@ -1367,7 +1349,7 @@
 		<onback>PageUp</onback>
 		<onback>PageUp</onback>
 		<preloaditems>2</preloaditems>
-	</include>
+	</include-->
 	<include name="BusyListSpinner">
 		<param name="posy">160</param>
 		<param name="visible">true</param>
