@@ -14,6 +14,7 @@
 				<height>100%</height>
 				<onleft>9000</onleft>
 				<onright>531</onright>
+                <oninfo condition="SubString(ListItem.DBType,set)">ActivateWindow(1064)</oninfo>
 				<onup condition="Integer.IsGreater(Container.NumPages,1)">500</onup>
 				<onup condition="!Integer.IsGreater(Container.NumPages,1)">9000</onup>
 				<ondown>500</ondown>
