@@ -383,6 +383,7 @@
 				<height>100%</height>
 				<onleft>9000</onleft>
 				<onright>531</onright>
+                <oninfo condition="SubString(ListItem.DBType,set)">ActivateWindow(1064)</oninfo>
 				<onup condition="Integer.IsGreater(Container.NumPages,1)">54</onup>
 				<onup condition="!Integer.IsGreater(Container.NumPages,1)">9000</onup>
 				<ondown>54</ondown>
