@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <includes>
 	<include name="View_55_WideList">
+
 		<control type="group">
 			<include>OpenClose_Right</include>
 			<visible>Control.IsVisible(55)</visible>
 			<include>Visible_Right</include>
+
 			<control type="fixedlist" id="55">
 				<left>594</left>
 				<top>list_y_offset</top>
 				<bottom>list_y_offset</bottom>
 				<right>0</right>
+                <oninfo condition="SubString(ListItem.DBType,set)">ActivateWindow(1064)</oninfo>
 				<scrolltime tween="cubic" easing="out">500</scrolltime>
 				<orientation>vertical</orientation>
 				<pagecontrol>531</pagecontrol>
@@ -118,6 +121,7 @@
 				</itemlayout>
 				<include condition="Window.IsActive(music)">SongsListLayout</include>
 				<include>AddonsListLayout</include>
+
 			</control>
 		</control>
 	</include>
@@ -232,5 +236,8 @@
 				<shadowcolor>text_shadow</shadowcolor>
 			</control>
 		</itemlayout>
+
+	
+
 	</include>
 </includes>
